<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_marginBottom="30dp"
        android:id="@+id/title"
        android:text="@string/sign_in_title"
        android:gravity="center"
        android:textColor="@color/normalText"
        android:textSize="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_marginBottom="10dp"
        android:id="@+id/layout_email_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/icon"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/fieldEmail"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="center_horizontal"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:maxLines="1" />

        <EditText
            android:id="@+id/fieldPassword"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="center_horizontal"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:maxLines="1" />

    </LinearLayout>

    <LinearLayout
        android:padding="5dp"
        android:orientation="horizontal"
        android:layout_width="300dp"
        android:layout_height="wrap_content">
        <TextView
            android:text="* "
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
        <TextView
            android:id="@+id/guideMessage1"
            android:textSize="20dp"
            android:text="@string/sign1_guide_message"
            android:layout_width="300dp"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:padding="5dp"
        android:orientation="horizontal"
        android:layout_width="300dp"
        android:layout_height="wrap_content">
        <TextView
            android:text="* "
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
        <TextView
            android:id="@+id/guideMessage2"
            android:textSize="20dp"
            android:text="@string/sign2_guide_message"
            android:layout_width="300dp"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:padding="5dp"
        android:orientation="horizontal"
        android:layout_marginBottom="30dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content">
        <TextView
            android:text="* "
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
        <TextView
            android:id="@+id/guideMessage3"
            android:textSize="20dp"
            android:text="@string/sign3_guide_message"
            android:layout_width="300dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <TextView
        android:layout_marginBottom="30dp"
        android:id="@+id/singIn"
        android:text="@string/sign_in"
        android:gravity="center"
        android:textColor="@color/normalText"
        android:textSize="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginBottom="30dp"
        android:id="@+id/singUp"
        android:text="@string/sign_up"
        android:gravity="center"
        android:textColor="@color/normalText"
        android:textSize="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
